# gpu

./: .gitignore  README.md
.beads/: issues.jsonl
.claude-plugin/: marketplace.json  plugin.json
commands/: gpu-create.md  gpu-debug.md  gpu-optimize.md  gpu-quick.md
docs/: network-volumes.md
examples/background-removal/: .gitignore  README.md  gpu.jsonc  run.py  setup.py
examples/comfyui/: .gitignore  README.md  gpu.jsonc  gpu.toml  setup_comfyui.py
examples/crewai-stock-analysis/: .gitignore  .ollama_model  README.md  crew.py  gpu.jsonc  gpu.toml  main.py  ollama_utils.py  pyproject.toml  setup.py
examples/crewai-stock-analysis/config/: agents.yaml
examples/crewai-stock-analysis/reports/: .gitkeep
examples/crewai-stock-analysis/tools/: __init__.py  search.py
examples/huggingface-gradio/: .gitignore  README.md  gpu.jsonc  requirements.txt  run.py  setup.py
examples/huggingface-spaces/: .gitignore  README.md  gpu.jsonc  requirements.txt  run_space.py  setup_space.py
examples/invokeai/: .gitignore  README.md  gpu.jsonc  gpu.toml  pyproject.toml  run_invokeai.py  setup_invokeai.py
examples/multi-agent/: .gitignore  README.md  agent_example.py  gpu.jsonc  requirements.txt  serve.py
examples/ollama-models/: .gitignore  README.md  gpu.jsonc  models.json  pyproject.toml  startup.sh
examples/qwen-image-edit/: gpu.jsonc  run.py
examples/vllm-models/: .gitignore  README.md  gpu.jsonc  models.json  pyproject.toml  startup.sh
examples/vllm-models/ui/: app.js  index.html  style.css
examples/wan22-video/: .gitignore  README.md  generate.py  gpu.jsonc  requirements.txt
skills/gpu/: SKILL.md
skills/gpu-cost-optimizer/: SKILL.md
templates/: CLI_TEMPLATES_GUIDE.md
templates/crewai-stock-analysis/: README.md  gpu.jsonc  init_ollama.py  main.py  ollama_utils.py  pyproject.toml  startup.sh  web_server.py
templates/crewai-stock-analysis/config/: tasks.yaml
templates/crewai-stock-analysis/tools/: search.py
templates/unsloth-train/: .gitignore  README.md  gpu.jsonc  merge_and_export.py  pyproject.toml  startup.sh  train.py  training.json
templates/unsloth-train/data/: sample-alpaca.jsonl  sample-function-call.jsonl
(+62 files in other folders)
