[project]
name = "crewai-stock-analysis"
version = "0.1.0"
description = "GPU CLI example: Multi-agent stock analysis with local LLMs"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]",
    "litellm",
    "ddgs",
    "beautifulsoup4",
    "requests",
    "pyyaml",
]

[tool.setuptools]
py-modules = []
